<resources>
    <string name="app_name">PerpustakaanApp</string>
    <string name="nis">Nomor Induk Siswa</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="login">Log in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_nisn">*User Id Siswa Adalah NISN</string>
    <string-array name="edu_level_member">
        <item>Pilih Jenjang</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>SMK</item>
    </string-array>
    <string-array name="edu_level_admin">
        <item>Pilih Jenjang</item>
        <item>Guru SMP</item>
        <item>Guru SMA</item>
        <item>Guru SMK</item>
    </string-array>

    <!-- String Resource For Alert User -->
    <string name="refresh">Muat Ulang</string>
    <string name="back_to_dashboard">Kembali Ke DashBoard</string>
    <string name="data_confirmation">Apakah Anda Yakin Data Sudah Benar?</string>
    <string name="penalty_confirmation">Pastikan Siswa Telah Membayar Denda</string>
    <string name="register_confirmation">*PASTIKAN SEMUA DATA BENAR, KARENA HANYA ADMIN YANG BISA MENGUBAH DATA</string>
    <string name="confirmation_yes">Saya Yakin</string>
    <string name="confirmation_recheck">Periksa Kembali</string>
    <string name="confirmation_no">Tidak</string>
    <string name="delete_confirmation">Apakah Anda Yakin Akan Menghapusnya?</string>
    <string name="loan_approval_confirmation">Yakin Dengan Keputusan Anda?</string>
    <string name="change_image_confirmation">Apakah Anda Yakin Mengubah Gambar?</string>
    <string name="log_out_confirmation">Apakah Anda Yakin Ingin Keluar?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required">Required</string>
    <string name="toolbar_title">Daya Utama Library</string>
    <string name="img_description">Menu 1</string>
    <string name="alphabet_A">Menu A</string>
    <string name="action_settings">Settings</string>
    <string name="daftar_buku">Daftar Buku</string>
    <string name="bookName">Cara Memahami Musik</string>
    <string name="poster">Poster</string>
    <string name="description">Deskripsi Buku</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_author">Penulis</string>
    <string name="author">Pramoedya Ananta Toer</string>
    <string name="text_year">Tahun terbit</string>
    <string name="year">2018</string>
    <string name="publisher">Penerbit</string>
    <string name="text_publisher">Penerbit</string>
    <string name="text_description">Deskripsi</string>
    <string name="book_title">Sebuah Seni Untuk Bersikap Bodo Amat</string>
    <string name="loan">Pinjam Buku</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="logout">Log out</string>
    <string name="title_activity_side_nav">SIdeNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>