<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.detailbook.DetailBookActivity"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="230dp"
            android:layout_height="300dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="56dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_author"
            android:layout_width="73dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_author"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/author"
            android:layout_width="126dp"
            android:layout_height="51dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_author"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="116dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_year"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_publisher"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_publisher"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_loan"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/year"
            android:layout_width="52dp"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_year"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/publisher"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="172dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_publisher"
            app:layout_constraintTop_toBottomOf="@+id/button_loan"
            app:layout_constraintVertical_bias="0.05"
            tools:text="@string/publisher" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_description"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_publisher"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/description"
            android:layout_width="298dp"
            android:layout_height="332dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/lorem_ipsum" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_loan"
            android:layout_width="99dp"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="52dp"
            android:text="@string/loan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/year" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>