<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#073042"
    tools:context=".ui.home.HomeUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nisContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/design_default_color_error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNIS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                        android:drawablePadding="8dp"
                        android:hint="User Id"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/design_default_color_error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"

                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:text="@string/text_nisn"
                        android:textColor="@color/colorRed" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    app:cardBackgroundColor="#073042"
                    app:cardCornerRadius="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_an_account"
                        android:textColor="#073042" />

                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"

                        android:text="@string/sign_up"
                        android:textColor="#073042"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</ScrollView>